--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
             <div class="tast">
              <div class="turn">
                  <span class="move">0</span> moves</div>
-             <div class="time">Time : <span  class="timer">0</span> s</div>
+             <div class="time">Time: <span  class="timer">0</span> s</div>
             </div>
+            <div class="btnMusic">
+                MUSIC
+            </div>
+            <audio id="audio"controls loop style="width: 200px;">
+                <source src="./assets/music/music7.mp3" type="audio/mpeg" >
+            </audio>
         </div> 
         <div class="board-container">
             <div class="board" data-dimension="4"></div>
